tests/pass/UnsignedRight.java
package pass;

public class UnsignedRight {

    public int unsignedRight(int x, int y) {
        return x >>> y ;
    } 
}