tests/fail/UnsignedRight.java
package fail;

public class UnsignedRight {

    public static void main(String[] args) {
        System.out.println(1 >>> "Hej");
    } 
}